--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/components/*":["components/*"]
+            "@/components/*":["components/*"],
+            "@/theme/*":["theme/*"],
+            "@/styles/*":["styles/*"],
+            "@/utils/*":["utils/*"]
         }
     }
 }
